--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,8 +74,9 @@ flutter:
           weight: 500
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
 flutter_assets:
   assets_path: assets/images
-  output_path: lib/utils
-  filename: app_images.dart
+  output_path: lib/core/utils
+  filename: assets.dart
   field_prefix: null
